# CMakeList.txt : CMake project for GT-Unbanner, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("GT-Unbanner")

# Add source to this project's executable.
add_executable (GT-Unbanner "GT-Unbanner.cpp" "GT-Unbanner.h")

# TODO: Add tests and install targets if needed.
